--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -7,7 +7,8 @@
   background-color: yellow;
 }
 
-.left-button.right-button {
+.left-button,
+.right-button {
   font-size: 28px;
   font-family: helvetica, "Times New Roman", sans-serif;
 }
